
Changes since 1.7
=================

Changes:
* API change: `SmtEngine::query()` has been renamed to
  `SmtEngine::checkEntailed()` and `Result::Validity` has been renamed to
  `Result::Entailment` along with corresponding changes to the enum values.
* Java API change: The name of CVC4's package is now `edu.stanford.CVC4`
  instead of `edu.nyu.acsys.CVC4`.
* Printing of BV constants: previously CVC4 would print BV constant
  values as indexed symbols by default and in binary notation with the
  option --bv-print-consts-in-binary. To be SMT-LIB compliant the
  default behavior is now to print BV constant values in binary
  notation and as indexed symbols with the new option
  --bv-print-consts-as-indexed-symbols. The option
  --bv-print-consts-in-binary has been removed.

Changes since 1.6
=================

New Features:
* Proofs:
  * Support for bit-vector proofs with eager bitblasting (older versions only
    supported proofs with lazy bitblasting).
* Strings:
  * Support for `str.replaceall` operator.
  * New option `--re-elim` to reduce regular expressions to extended string
    operators, resulting in better performance on regular expression benchmarks
    (enabled by default).
* SyGuS:
  * Support for abduction (`--sygus-abduct`). Given a formula, this option uses
    CVC4's SyGuS solver to find a sufficient condition such that the
    conjunction of the condition and the formula is unsatisfiable.
  * Support for two new term enumerator strategies: variable agnostic
    (`--sygus-active-gen=var-agnostic`) and fast (`--sygus-active-gen=enum`).
    By default, CVC4 tries to choose the best term enumerator strategy
    automatically based on the input (`--sygus-active-gen=auto`).
  * Support for streaming solutions of increasingly smaller size when using the
    PBE solver (`--sygus-stream --sygus-pbe`). After the first solution is found
    and printed, the solver will continue to look for new solutions and print