@@ -9,6 +9,9 @@ Changes:
   `Result::Entailment` along with corresponding changes to the enum values.
 * Java API change: The name of CVC4's package is now `edu.stanford.CVC4`
   instead of `edu.nyu.acsys.CVC4`.
+* The default output language is changed from CVC to SMT-LIB 2.6. The
+  default output language is used when the problem language cannot be
+  easily inferred (for example when CVC4 is used from the API).
 * Printing of BV constants: previously CVC4 would print BV constant
   values as indexed symbols by default and in binary notation with the
   option --bv-print-consts-in-binary. To be SMT-LIB compliant the
